fixed bug on IE for viewing about section

--- a/public/main.css
+++ b/public/main.css
@@ -525,7 +525,11 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 350px;
+        width: 40%;
+    }
+
+    .about-section-block {
+        width: 60%;
     }
 
     .desktop-hamburger {
